Add optional comment posting

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ SCREENSHOT_DIR=./screenshots
 # 1回の処理で実行するいいねの上限
 LIKE_LIMIT=30
 
+# コメントに使用するテキスト (空欄にするとコメントしません)
+COMMENT_TEXT=
+
 # Insta ID/Pass
 INSTA_ID=
 INSTA_PASSWORD=
