feat: add daily action limits

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,12 @@ HEADLESS=false
 SCREENSHOT_DIR=./screenshots
 # 1回の処理で実行するいいねの上限
 LIKE_LIMIT=30
+# 1日の最大フォロー数
+FOLLOW_DAILY_LIMIT=20
+# 1日の最大いいね数
+LIKE_DAILY_LIMIT=100
+# 1日の最大コメント数
+COMMENT_DAILY_LIMIT=10
 
 # コメントに使用するテキスト (空欄にするとコメントしません)
 COMMENT_TEXT=
